feat(billing): implement complete SaaS billing system with Stripe integration
- Add comprehensive billing entities (Subscription, Payment, UsageRecord) with multi-tenant support
- Implement Stripe service with payment processing, subscriptions, and webhook handling
- Include development mode with mock responses for testing without Stripe account
- Add usage tracking and plan limits enforcement (FREE/PRO/ENTERPRISE tiers)
- Create GraphQL API for billing operations with proper authentication
- Support real-time payment status updates through Stripe webhooks
- Include database migrations for billing schema with proper relationships
- Add plan limits service for feature usage enforcement and billing compliance
- Resolve GraphQL schema conflicts and TypeScript strict mode compatibility
- Complete SaaS foundation ready for production deployment and frontend integration

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,12 @@ FRONTEND_URL=http://localhost:3001
 
 # Server Configuration
 PORT=3000
+
+# Stripe Configuration (for billing)
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+
+# Stripe Price IDs (create these in Stripe Dashboard)
+STRIPE_PRO_PRICE_ID=price_your_pro_plan_id
+STRIPE_ENTERPRISE_PRICE_ID=price_your_enterprise_plan_id
